docs: modernize recommended JVM flags for Java 21 clients